tests/ucc/type/good/ptr-type-alias-2.c
typedef int u;
typedef int v;

int main(void)
{
    u *a;
    v *c;

    c = a;

    return 0;
}
