tests/ucc/type/bad/if-vs-struct.c
typedef struct a
{
    int a;
} my_struct;

int main(void)
{
    my_struct a;

    if (a)
    {

    }

    return 0;
}
